--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/mongoose": "^5.11.97",
     "aws-sdk": "^2.1552.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
